--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                   I have created a MyPortfolio site using HTML, advanced CSS and javascript.
                 </p>
                 <div class="project-buttons">
-                  <a href="" target="_blank" class="github-redirect"
+                  <a href="https://github.com/shushant786/MyPortfolio" target="_blank" class="github-redirect"
                     aria-label="Visit MyPortfolio on GitHub">
                     <img src="src/svg/github.svg" alt="github redirect button" />
                   </a>
