--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                     aria-label="Visit MyPortfolio on GitHub">
                     <img src="src/svg/github.svg" alt="github redirect button" />
                   </a>
-                  <a href="" target="_blank" class="cta"
+                  <a href="https://my-portfolio-drab-eta-24.vercel.app/" target="_blank" class="cta"
                     aria-label="Visit MyPortfolio live">
                     <span>Live view</span>
                     <svg viewBox="0 0 13 10" height="10px" width="15px">
