--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 
   <script>
     function openURL() {
-      var url = "src/pdf/Shushant.pdf";
+      var url = "src/pdf/_Shushant.pdf";
 
       window.open(url, "_blank");
     }
